--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/IamHuadong/creat-react-app#readme",
   "devDependencies": {
+    "@babel/preset-react": "^7.12.7",
+    "clean-webpack-plugin": "^3.0.0",
+    "html-webpack-plugin": "^4.5.0",
     "webpack": "^4.44.2",
     "webpack-cli": "^4.2.0"
   },
