--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Create a react project using typescript, babel and eslint",
   "main": "index.js",
   "scripts": {
+    "start": "webpack serve",
     "build": "webpack --config webpack.config.js"
   },
   "repository": {
@@ -17,13 +18,19 @@
   },
   "homepage": "https://github.com/IamHuadong/creat-react-app#readme",
   "devDependencies": {
+    "@babel/core": "^7.12.9",
     "@babel/preset-react": "^7.12.7",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^4.5.0",
+    "typescript": "^4.1.2",
     "webpack": "^4.44.2",
-    "webpack-cli": "^4.2.0"
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   }
